syntax = "proto3";

package order;
option go_package="./order";


service Order {
  rpc Orders(OrdersRequest) returns(OrdersResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc CreateOrderCheck(CreateOrderRequest) returns (CreateOrderResponse);
  rpc RollbackOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message OrdersRequest {
  int64 user_id = 1;
  int32 status = 2;
  int64 cursor = 3;
  int32 ps = 4;
}

message OrdersResponse {
  repeated OrderItem orders = 1;
  bool is_end = 2;
  string create_time = 3;
}

message OrderItem {
  string order_id = 1;
  int64 quantity = 2;
  float payment = 3;
  uint64 product_id = 4;
  int64 user_id = 5;
  int64 create_time = 6;
}

message CreateOrderRequest {
  uint64 uid = 1;
  uint64 pid = 2;
}

message CreateOrderResponse {
}