syntax = "proto3";

package product;
option go_package="./product";

service Product {
  rpc Product(ProductItemRequest) returns (ProductItem) ;
  rpc Products(ProductRequest) returns(ProductResponse);
}

message ProductItemRequest {
  uint64 product_id = 1;
}

message ProductRequest {
  string product_ids = 1;
}

message ProductResponse {
  map<uint64, ProductItem> products = 1;
}

message ProductItem {
  uint64 product_id = 1;
  string name = 2;
  string description = 3;
  string image_url = 4;
}